--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "lib": ["es2017", "dom", "dom.iterable"],
         "module": "esNext",
         "moduleResolution": "node",
+        "noImplicitOverride": true,
         "noImplicitReturns": true,
         "noUnusedParameters": true,
         "noUnusedLocals": true,
