--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
         "allowSyntheticDefaultImports": true,
         "baseUrl": "./packages",
         "declaration": true,
+        "emitDeclarationOnly": true,
         "experimentalDecorators": true,
         "importHelpers": true,
         "inlineSources": true,
         "isolatedModules": true,
-        "lib": ["es2017", "dom", "dom.iterable"],
+        "lib": ["es2018", "dom", "dom.iterable"],
         "module": "esNext",
         "moduleResolution": "node",
         "noImplicitOverride": true,
@@ -18,8 +19,8 @@
         "skipLibCheck": true,
         "strict": true,
         "sourceMap": true,
-        "target": "es2017",
-        "types": ["mocha", "chai", "sinon", "node"]
+        "target": "es2018",
+        "types": ["mocha", "chai", "sinon", "node", "swc"]
     },
     "include": ["./global.d.ts"]
 }
