--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,9 +17,18 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
+    "@spectrum-web-components/base": "^0.7.5",
+    "@spectrum-web-components/shared": "^0.15.6",
+    "@spectrum-web-components/sidenav": "^0.14.2",
+    "@spectrum-web-components/styles": "^0.23.3",
+    "@spectrum-web-components/table": "^0.1.13",
+    "@spectrum-web-components/tags": "^0.10.7",
+    "@spectrum-web-components/theme": "^0.14.14",
+    "@spectrum-web-components/top-nav": "^0.7.1",
     "lit": "^2.6.1"
   },
   "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^2.8.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
