--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,7 +25,8 @@
     "@spectrum-web-components/tags": "^0.10.7",
     "@spectrum-web-components/theme": "^0.14.14",
     "@spectrum-web-components/top-nav": "^0.7.1",
-    "lit": "^2.6.1"
+    "lit": "^2.6.1",
+    "lit-markdown": "^1.3.2"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.8.0",
