this works for pages I have explicetly defined

--- a/packages/web/tsconfig.node.json
+++ b/packages/web/tsconfig.node.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
+    "experimentalDecorators": true,
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true
   },
