--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,11 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "main": "dist/my-element.es.js",
-  "exports": {
-    ".": "./dist/my-element.es.js"
-  },
-  "types": "types/my-element.d.ts",
   "files": [
     "dist",
     "types"
@@ -17,6 +12,7 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.316.0",
     "@spectrum-web-components/base": "^0.7.5",
     "@spectrum-web-components/shared": "^0.15.6",
     "@spectrum-web-components/sidenav": "^0.14.2",
@@ -25,12 +21,12 @@
     "@spectrum-web-components/tags": "^0.10.7",
     "@spectrum-web-components/theme": "^0.14.14",
     "@spectrum-web-components/top-nav": "^0.7.1",
-    "lit": "^2.6.1",
+    "lit": "^2.7.2",
     "lit-markdown": "^1.3.2"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "^2.8.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "typescript": "^5.0.4",
+    "vite": "^4.2.2"
   }
 }
