--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.316.0",
+    "@lit-labs/ssr": "^3.1.1",
+    "@lit-labs/ssr-client": "^1.1.1",
     "@spectrum-web-components/base": "^0.7.5",
     "@spectrum-web-components/shared": "^0.15.6",
     "@spectrum-web-components/sidenav": "^0.14.2",
@@ -21,10 +23,12 @@
     "@spectrum-web-components/tags": "^0.10.7",
     "@spectrum-web-components/theme": "^0.14.14",
     "@spectrum-web-components/top-nav": "^0.7.1",
+    "d3": "^7.8.4",
     "lit": "^2.7.2",
     "lit-markdown": "^1.3.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "typescript": "^5.0.4",
     "vite": "^4.2.2"
