--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -18,6 +18,13 @@
     "useDefineForClassFields": false,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "./.eslintrc.cjs"
+  ],
+  "exclude": [
+    "vite.config.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
