--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -24,8 +24,10 @@
     "@spectrum-web-components/theme": "^0.14.14",
     "@spectrum-web-components/top-nav": "^0.7.1",
     "d3": "^7.8.4",
+    "d3-array": "^3.2.3",
     "d3-collection": "^1.0.7",
     "d3-dsv": "^3.0.1",
+    "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
     "lit": "^2.7.2",
     "lit-markdown": "^1.3.2"
@@ -34,6 +36,7 @@
     "@types/d3": "^7.4.0",
     "@types/d3-collection": "^1.0.10",
     "@types/d3-dsv": "^3.0.1",
+    "@types/d3-hierarchy": "^3.1.2",
     "@types/d3-selection": "^3.0.5",
     "@webcomponents/webcomponentsjs": "^2.8.0",
     "typescript": "^5.0.4",
