upgrade deps and build

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,36 +16,72 @@
     "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\""
   },
   "dependencies": {
-    "lit": "^2.0.2"
+    "@spectrum-css/button": "^9.1.6",
+    "@spectrum-css/page": "^5.0.22",
+    "@spectrum-css/vars": "^9.0.2",
+    "@spectrum-web-components/button": "^0.20.4",
+    "@spectrum-web-components/checkbox": "^0.14.13",
+    "@spectrum-web-components/dialog": "^0.11.15",
+    "@spectrum-web-components/field-label": "^0.10.9",
+    "@spectrum-web-components/link": "^0.14.7",
+    "@spectrum-web-components/menu": "^0.16.16",
+    "@spectrum-web-components/picker": "^0.15.1",
+    "@spectrum-web-components/radio": "^0.11.13",
+    "@spectrum-web-components/shared": "^0.15.6",
+    "@spectrum-web-components/sidenav": "^0.14.2",
+    "@spectrum-web-components/styles": "^0.23.3",
+    "@spectrum-web-components/table": "^0.1.13",
+    "@spectrum-web-components/tags": "^0.10.7",
+    "@spectrum-web-components/textfield": "^0.13.14",
+    "@spectrum-web-components/theme": "^0.14.14",
+    "@spectrum-web-components/tooltip": "^0.11.16",
+    "@spectrum-web-components/top-nav": "^0.7.1",
+    "d3": "^7.8.4",
+    "d3-array": "^3.2.3",
+    "d3-dsv": "^3.0.1",
+    "d3-hierarchy": "^3.1.2",
+    "d3-selection": "^3.0.0",
+    "lit": "^2.7.2",
+    "zero-md": "^2.4.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-env": "^7.21.4",
     "@custom-elements-manifest/analyzer": "^0.4.17",
-    "@open-wc/building-rollup": "^2.0.2",
-    "@open-wc/eslint-config": "^9.2.1",
-    "@open-wc/testing": "^3.1.6",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "@web/dev-server": "^0.1.34",
-    "@web/rollup-plugin-html": "^1.11.0",
-    "@web/rollup-plugin-import-meta-assets": "^1.0.7",
-    "@web/test-runner": "^0.14.0",
+    "@open-wc/building-rollup": "^2.2.3",
+    "@open-wc/eslint-config": "^10.0.0",
+    "@open-wc/testing": "^3.1.8",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@types/d3": "^7.4.0",
+    "@types/d3-array": "^3.0.4",
+    "@types/d3-dsv": "^3.0.1",
+    "@types/d3-hierarchy": "^3.1.2",
+    "@types/d3-selection": "^3.0.5",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.13",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "@web/dev-server": "^0.1.38",
+    "@web/rollup-plugin-html": "^1.11.1",
+    "@web/rollup-plugin-import-meta-assets": "^1.0.8",
+    "@web/test-runner": "^0.14.1",
+    "@webcomponents/webcomponentsjs": "^2.8.0",
     "babel-plugin-template-html-minifier": "^4.1.0",
     "concurrently": "^5.3.0",
-    "deepmerge": "^4.2.2",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.3.0",
+    "deepmerge": "^4.3.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^4.3.8",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.4.1",
+    "lint-staged": "^13.2.1",
+    "prettier": "^2.8.7",
     "rimraf": "^3.0.2",
-    "rollup": "^2.60.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-esbuild": "^5.0.0",
-    "rollup-plugin-workbox": "^6.2.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.2"
+    "rollup-plugin-styles": "^4.0.0",
+    "rollup-plugin-visualizer": "^5.9.0",
+    "rollup-plugin-workbox": "^6.2.2",
+    "tslib": "^2.5.0",
+    "typescript": "^5.0.4"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
