current state, the top nav bar has the right color

--- a/packages/web/.gitignore
+++ b/packages/web/.gitignore
@@ -5,6 +5,14 @@
 ## system files
 .DS_Store
 
+.rollup.cache
+
+## build artifacts
+/components/**/*.js
+/components/**/*.js.map
+/test/**/*.js
+/test/**/*.js.map
+
 ## npm
 /node_modules/
 /npm-debug.log
