--- a/packages/web.openwc/package.json
+++ b/packages/web.openwc/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "evonytkrtips-web",
-  "version": "0.6.17",
-  "private": true,
-  "description": "web frontend for EvonyTKRTips",
-  "license": "Apache-2.0",
-  "author": "Luke Schierer",
-  "main": "index.js",
+  "name": "evony-tips",
+  "description": "Webcomponent evony-tips following open-wc recommendations",
+  "license": "MIT",
+  "author": "evony-tips",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "rimraf dist && pnpm run build:tsc && rollup -c rollup.config.js",
-    "build:tsc": "tsc && cp src/styles.css out-tsc/src",
-    "format": "pnpm run format:eslint && pnpm run format:prettier",
-    "format:eslint": "eslint --ext .ts,.html . --fix --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.js\" \"**/*.ts\" --write --ignore-path .gitignore",
-    "lint:eslint": "eslint --ext .ts,.html . --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.js\" \"**/*.ts\" --check --ignore-path .gitignore",
-    "postbuild": "mv dist/*.css dist/styles.css",
-    "start": "concurrently --kill-others --names tsc,wds \"pnpm run tsc:watch\" \"wds --config wds.config.js\"",
-    "start:build": "pnpm run build && wds --root-dir dist --app-index index.html --open --compatibility none",
-    "tsc:watch": "tsc --watch"
+    "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
+    "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
+    "test": "tsc && wtr --coverage",
+    "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\"",
+    "build": "rimraf dist && tsc && rollup -c ",
+    "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
+    "analyze": "cem analyze --litelement",
+    "start": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds\""
   },
   "dependencies": {
+    "@rollup/plugin-typescript": "^11.1.0",
     "@spectrum-css/button": "^9.1.6",
     "@spectrum-css/page": "^5.0.22",
     "@spectrum-css/vars": "^9.0.2",
@@ -41,48 +37,74 @@
     "@spectrum-web-components/theme": "^0.14.14",
     "@spectrum-web-components/tooltip": "^0.11.16",
     "@spectrum-web-components/top-nav": "^0.7.1",
+    "@web/dev-server-rollup": "^0.5.0",
     "d3": "^7.8.4",
     "d3-array": "^3.2.3",
-    "d3-collection": "^1.0.7",
     "d3-dsv": "^3.0.1",
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
     "lit": "^2.7.2",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
     "zero-md": "^2.4.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
+    "@custom-elements-manifest/analyzer": "^0.8.0",
     "@open-wc/building-rollup": "^2.2.3",
     "@open-wc/eslint-config": "^10.0.0",
-    "@rollup/plugin-commonjs": "^21.1.0",
+    "@open-wc/testing": "^3.1.8",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/d3": "^7.4.0",
     "@types/d3-array": "^3.0.4",
-    "@types/d3-collection": "^1.0.10",
     "@types/d3-dsv": "^3.0.1",
     "@types/d3-hierarchy": "^3.1.2",
     "@types/d3-selection": "^3.0.5",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.13",
+    "@types/uglifycss": "^0.0.7",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@web/dev-server": "^0.2.0",
+    "@web/rollup-plugin-copy": "^0.4.0",
+    "@web/rollup-plugin-html": "^2.0.0",
+    "@web/rollup-plugin-import-meta-assets": "^2.0.0",
+    "@web/test-runner": "^0.16.0",
     "@webcomponents/webcomponentsjs": "^2.8.0",
+    "autoprefixer": "^10.4.14",
+    "babel-plugin-template-html-minifier": "^4.1.0",
     "concurrently": "^8.0.1",
     "deepmerge": "^4.3.1",
+    "es-dev-server": "^2.1.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-use-decorator": "^0.2.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
+    "postcss": "^8.4.23",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.8.7",
     "rimraf": "^5.0.0",
-    "rollup": "^2.63.0",
+    "rollup": "^3.20.7",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-import-css": "^3.2.1",
+    "rollup-plugin-lit-css": "^4.0.1",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-visualizer": "^5.9.0",
+    "rollup-plugin-workbox": "^7.0.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4"
   },
-  "customElements": "custom-elements.json",
   "prettier": {
     "singleQuote": true,
     "arrowParens": "avoid"
-  }
+  },
+  "husky": {
+    "hooks": {}
+  },
+  "customElements": "custom-elements.json"
 }
