--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "evonytkrtips-web",
-  "version": "0.6.17",
+  "version": "0.6.18",
   "private": true,
   "description": "web frontend for EvonyTKRTips",
   "license": "Apache-2.0",
@@ -8,52 +8,64 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "rimraf dist && pnpm run build:tsc && rollup -c rollup.config.js",
-    "build:tsc": "tsc && cp src/styles.css out-tsc/src",
-    "format": "pnpm run format:eslint && pnpm run format:prettier",
-    "format:eslint": "eslint --ext .ts,.html . --fix --ignore-path .gitignore",
-    "format:prettier": "prettier \"**/*.js\" \"**/*.ts\" --write --ignore-path .gitignore",
-    "lint:eslint": "eslint --ext .ts,.html . --ignore-path .gitignore",
-    "lint:prettier": "prettier \"**/*.js\" \"**/*.ts\" --check --ignore-path .gitignore",
-    "postbuild": "mv dist/*.css dist/styles.css",
-    "start": "concurrently --kill-others --names tsc,wds \"pnpm run tsc:watch\" \"wds --config wds.config.js\"",
-    "start:build": "pnpm run build && wds --root-dir dist --app-index index.html --open --compatibility none",
-    "tsc:watch": "tsc --watch"
+    "build:babelrc": "rimraf dist && rollup -c demo/babelrc/rollup.config.js",
+    "build:modify-babel-plugin": "rimraf dist && rollup -c demo/modify-babel-plugin/rollup.config.js",
+    "build:mpa": "rimraf dist && rollup -c",
+    "start:build": "wds --root-dir dist ",
+    "start:demo": "wds --app-index demo/js/index.html --open",
+    "start:modify-babel-plugin": "pnpm run build:modify-babel-plugin && pnpm run start:build",
+    "start:mpa": "pnpm run build:mpa && pnpm run start:build",
+    "test": "npm run test:node",
+    "test:node": "mocha test-node"
   },
+  "files": [
+    "*.js",
+    "src"
+  ],
   "dependencies": {
     "@spectrum-css/button": "^9.1.6",
     "@spectrum-css/page": "^5.0.22",
     "@spectrum-css/vars": "^9.0.2",
-    "@spectrum-web-components/button": "^0.20.4",
-    "@spectrum-web-components/checkbox": "^0.14.13",
-    "@spectrum-web-components/dialog": "^0.11.15",
-    "@spectrum-web-components/field-label": "^0.10.9",
-    "@spectrum-web-components/link": "^0.14.7",
-    "@spectrum-web-components/menu": "^0.16.16",
-    "@spectrum-web-components/picker": "^0.15.1",
-    "@spectrum-web-components/radio": "^0.11.13",
-    "@spectrum-web-components/shared": "^0.15.6",
-    "@spectrum-web-components/sidenav": "^0.14.2",
-    "@spectrum-web-components/styles": "^0.23.3",
-    "@spectrum-web-components/table": "^0.1.13",
-    "@spectrum-web-components/tags": "^0.10.7",
-    "@spectrum-web-components/textfield": "^0.13.14",
-    "@spectrum-web-components/theme": "^0.14.14",
-    "@spectrum-web-components/tooltip": "^0.11.16",
-    "@spectrum-web-components/top-nav": "^0.7.1",
+    "@spectrum-web-components/button": "^0.20.5",
+    "@spectrum-web-components/checkbox": "^0.14.14",
+    "@spectrum-web-components/dialog": "^0.11.16",
+    "@spectrum-web-components/field-label": "^0.10.10",
+    "@spectrum-web-components/link": "^0.14.8",
+    "@spectrum-web-components/menu": "^0.16.17",
+    "@spectrum-web-components/picker": "^0.15.2",
+    "@spectrum-web-components/radio": "^0.11.14",
+    "@spectrum-web-components/shared": "^0.15.7",
+    "@spectrum-web-components/sidenav": "^0.14.3",
+    "@spectrum-web-components/styles": "^0.24.0",
+    "@spectrum-web-components/table": "^0.1.14",
+    "@spectrum-web-components/tags": "^0.10.8",
+    "@spectrum-web-components/textfield": "^0.13.15",
+    "@spectrum-web-components/theme": "^0.15.0",
+    "@spectrum-web-components/tooltip": "^0.11.17",
+    "@spectrum-web-components/top-nav": "^0.7.2",
     "d3": "^7.8.4",
     "d3-array": "^3.2.3",
-    "d3-collection": "^1.0.7",
     "d3-dsv": "^3.0.1",
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
-    "lit": "^2.7.2",
-    "zero-md": "^2.4.0"
+    "lit": "^2.7.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/helpers": "^7.21.0",
+    "@babel/plugin-proposal-dynamic-import": "^7.18.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-transform-modules-systemjs": "^7.20.11",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
     "@open-wc/building-rollup": "^2.2.3",
+    "@open-wc/building-utils": "^2.21.1",
     "@open-wc/eslint-config": "^10.0.0",
-    "@rollup/plugin-commonjs": "^21.1.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-terser": "^0.4.1",
+    "@rollup/plugin-typescript": "^11.1.0",
     "@types/d3": "^7.4.0",
     "@types/d3-array": "^3.0.4",
     "@types/d3-collection": "^1.0.10",
@@ -61,26 +73,33 @@
     "@types/d3-hierarchy": "^3.1.2",
     "@types/d3-selection": "^3.0.5",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.15.13",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@web/dev-server": "^0.2.0",
-    "@webcomponents/webcomponentsjs": "^2.8.0",
+    "@types/node": "^18.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "@web/rollup-plugin-html": "^2.0.0",
+    "@web/rollup-plugin-import-meta-assets": "^2.0.0",
+    "@web/rollup-plugin-polyfills-loader": "^2.0.0",
+    "acorn-jsx": "^5.3.2",
+    "babel-plugin-template-html-minifier": "^4.1.0",
+    "browserslist": "^4.21.5",
     "concurrently": "^8.0.1",
     "deepmerge": "^4.3.1",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-use-decorator": "^0.2.0",
-    "prettier": "^2.8.7",
+    "magic-string": "^0.30.0",
+    "parse5": "^7.1.2",
+    "prettier": "^2.8.8",
+    "regenerator-runtime": "^0.13.11",
     "rimraf": "^5.0.0",
-    "rollup": "^2.63.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-styles": "^4.0.0",
-    "rollup-plugin-visualizer": "^5.9.0",
+    "rollup": "^3.21.0",
+    "rollup-plugin-workbox": "^7.0.0",
+    "terser": "^5.17.1",
     "tslib": "^2.5.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "@web/dev-server": "^0.2.0",
+    "@webcomponents/webcomponentsjs": "^2.8.0"
   },
-  "customElements": "custom-elements.json",
   "prettier": {
     "singleQuote": true,
     "arrowParens": "avoid"
