--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": ["es2017", "dom", "dom.iterable"],
     "strict": true,
     "esModuleInterop": false,
+    "useDefineForClassFields": false,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "importHelpers": true,
