the starter kit from lit helped build a working config

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -62,6 +62,7 @@
     "@open-wc/eslint-config": "^10.0.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.1",
     "@rollup/plugin-typescript": "^11.1.0",
     "@types/d3": "^7.4.0",
@@ -74,9 +75,11 @@
     "@types/node": "^18.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "@web/dev-server": "^0.2.0",
     "@web/rollup-plugin-html": "^2.0.0",
     "@web/rollup-plugin-import-meta-assets": "^2.0.0",
     "@web/rollup-plugin-polyfills-loader": "^2.0.0",
+    "@webcomponents/webcomponentsjs": "^2.8.0",
     "acorn-jsx": "^5.3.2",
     "babel-plugin-template-html-minifier": "^4.1.0",
     "browserslist": "^4.21.5",
@@ -91,12 +94,11 @@
     "regenerator-runtime": "^0.13.11",
     "rimraf": "^5.0.0",
     "rollup": "^3.21.0",
+    "rollup-plugin-summary": "^2.0.0",
     "rollup-plugin-workbox": "^7.0.0",
     "terser": "^5.17.1",
     "tslib": "^2.5.0",
-    "typescript": "^5.0.4",
-    "@web/dev-server": "^0.2.0",
-    "@webcomponents/webcomponentsjs": "^2.8.0"
+    "typescript": "^5.0.4"
   },
   "prettier": {
     "singleQuote": true,
