--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -66,6 +66,7 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.1",
     "@rollup/plugin-typescript": "^11.1.0",
+    "@spectrum-web-components/base": "^0.7.5",
     "@types/d3": "^7.4.0",
     "@types/d3-array": "^3.0.4",
     "@types/d3-collection": "^1.0.10",
