force me to be careful

--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -8,6 +8,7 @@
     "strict": true,
     "esModuleInterop": false,
     "useDefineForClassFields": false,
+    "noImplicitOverride": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "importHelpers": true,
