--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -92,6 +92,9 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-use-decorator": "^0.2.0",
     "magic-string": "^0.30.0",
+    "micromark": "^3.1.0",
+    "micromark-extension-frontmatter": "^1.1.0",
+    "mkdirp": "^3.0.1",
     "parse5": "^7.1.2",
     "prettier": "^2.8.8",
     "regenerator-runtime": "^0.13.11",
