--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -94,6 +94,8 @@
     "magic-string": "^0.30.0",
     "micromark": "^3.1.0",
     "micromark-extension-frontmatter": "^1.1.0",
+    "micromark-extension-gfm": "^2.0.1",
+    "micromark-extension-gfm-footnote": "^1.1.0",
     "mkdirp": "^3.0.1",
     "parse5": "^7.1.2",
     "prettier": "^2.8.8",
