part way to a working but utterly unformatted side navigation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "strictNullChecks": true,
+    "useDefineForClassFields": false
   }
 }
