configure typescript slightly

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,12 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "strictNullChecks": true,
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "verbatimModuleSyntax": true,
+    "plugins": [
+      {
+        "name": "@astrojs/ts-plugin"
+      }
+    ]
   }
 }
