--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {
     "vitest": "^0.31.0",
     "@types/node": "^20.1.4",
-    "sst": "^2.8.22",
+    "sst": "2.10.4",
     "@aws-sdk/types": "^3.329.0",
     "@aws-sdk/smithy-client": "^3.329.0"
   },
