--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^20.1.4",
     "@types/aws-lambda": "^8.10.115",
     "vitest": "^0.31.0",
-    "sst": "^2.8.22"
+    "sst": "2.10.4"
   },
   "dependencies": {
     "@pothos/core": "^3.30.0",
