--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,15 +7,16 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.1.4",
     "@types/aws-lambda": "^8.10.115",
-    "vitest": "^0.31.0",
-    "sst": "2.10.4"
+    "@types/node": "^20.1.4",
+    "sst": "2.11.1",
+    "vitest": "^0.31.0"
   },
   "dependencies": {
     "@pothos/core": "^3.30.0",
+    "@types/aws-lambda": "^8.10.115",
+    "apollo-server-lambda": "^3.12.0",
     "graphql": "^16.6.0",
-    "ulid": "^2.3.0",
-    "@types/aws-lambda": "^8.10.115"
+    "ulid": "^2.3.0"
   }
 }
