--- a/packages/web/config/_default/config.toml
+++ b/packages/web/config/_default/config.toml
@@ -1,9 +1,8 @@
 baseurl = "https://evonytkrtips.net/"
 canonifyURLs = false
 disableAliases = true
-disableHugoGeneratorInject = true
 enableEmoji = true
-enableGitInfo = false
+enableGitInfo = true
 enableRobotsTXT = true
 paginate = 7
 rssLimit = 10
@@ -15,27 +14,8 @@ disableLanguages = ["de", "nl"]
 
 # add redirects/headers
 [outputs]
-home = ["HTML", "RSS", "REDIRECTS", "HEADERS"]
+home = ["HTML", "RSS"]
 section = ["HTML", "RSS", "SITEMAP"]
-
-# remove .{ext} from text/netlify
-[mediaTypes."text/netlify"]
-suffixes = [""]
-delimiter = ""
-
-# add output format for netlify _redirects
-[outputFormats.REDIRECTS]
-mediaType = "text/netlify"
-baseName = "_redirects"
-isPlainText = true
-notAlternative = true
-
-# add output format for netlify _headers
-[outputFormats.HEADERS]
-mediaType = "text/netlify"
-baseName = "_headers"
-isPlainText = true
-notAlternative = true
 
 # add output format for section sitemap.xml
 [outputFormats.SITEMAP]
@@ -108,3 +88,6 @@ rel  = "sitemap"
   [[module.mounts]]
     source = "node_modules/@hyas/images/layouts"
     target = "layouts"
+  [[module.mounts]]
+    source = "node_modules/@adobe/coral-spectrum"
+    target = "assets/js/vendor/@adobe/coral-spectrum"
