--- a/packages/web/hugo.toml
+++ b/packages/web/hugo.toml
@@ -1,9 +1,7 @@
-name = "Evony TKR Tips"
-license = "MIT"
-licenselink = "http://creativecommons.org/licenses/by-nc/4.0/"
-description = "Tips for Budget Gamers"
-
-homepage = "https://evonytkrtips.net/"
+baseURL = 'https://www.evonytkrtips.net/'
+languageCode = 'en-us'
+title = 'Evony TKR Tips'
+theme = ['spectrum']
 
 tags = []
 
