--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -10,6 +10,6 @@
     "@types/node": "^20.1.4",
     "@types/aws-lambda": "^8.10.115",
     "vitest": "^0.31.0",
-    "sst": "^2.8.22"
+    "sst": "2.24.1"
   }
 }
