--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@graphql-apollo/functions",
+  "name": "@graphql-dynamo/functions",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -7,12 +7,15 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.1.4",
-    "sst": "2.24.12",
-    "vitest": "^0.31.0",
-    "@types/aws-lambda": "^8.10.115"
+    "@types/aws-lambda": "^8.10.119",
+    "@types/node": "^20.5.4",
+    "sst": "2.24.13",
+    "vitest": "^0.34.2"
   },
   "dependencies": {
-    "@pothos/core": "^3.30.0"
+    "@pothos/core": "^3.33.0",
+    "@types/aws-lambda": "^8.10.119",
+    "graphql": "^16.8.0",
+    "ulid": "^2.3.0"
   }
 }
