--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
     "module": "esnext",
+    "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@graphql-apollo/core/*": ["../core/src/*"]
+      "@graphql-dynamo/core/*": ["../core/src/*"]
     }
   }
 }
