as I try to learn to use a database, I think I may need to learn react, if only to be able to follow more of the tutorials. I'm having trouble understanding lit with dynamodb

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "experimentalDecorators": true,
     "strictNullChecks": true,
     "useDefineForClassFields": false,
     "verbatimModuleSyntax": true,
@@ -9,7 +8,9 @@
       {
         "name": "@astrojs/ts-plugin"
       }
-    ]
+    ],
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
   },
   "include": [
     "src/**/*.ts",
