--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,15 +7,18 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "vitest": "^0.31.0",
+    "@aws-sdk/smithy-client": "^3.329.0",
+    "@aws-sdk/types": "^3.329.0",
+    "@types/aws-lambda": "^8.10.119",
     "@types/node": "^20.1.4",
     "sst": "2.24.22",
-    "@aws-sdk/types": "^3.329.0",
-    "@aws-sdk/smithy-client": "^3.329.0"
+    "vitest": "^0.31.0"
   },
   "dependencies": {
-    "ulid": "^2.3.0",
+    "@aws-sdk/client-dynamodb": "^3.332.0",
+    "aws-lambda": "^1.0.7",
+    "aws-sdk": "^2.1450.0",
     "electrodb": "^2.5.1",
-    "@aws-sdk/client-dynamodb": "^3.332.0"
+    "ulid": "^2.3.0"
   }
 }
