remove one generated file, add a few files from https://github.com/sst/sst/blob/master/examples/create-sst-dynamo/ and generally attempt to follow that. I eventually got bogged down, but I think I might be finally making some minimal progress

--- a/packages/functions/tsconfig.json
+++ b/packages/functions/tsconfig.json
@@ -5,7 +5,8 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@graphql-dynamo/core/*": ["../core/src/*"]
+      "@core/*": ["../core/src/*"]
     }
   }
 }
+
