--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@graphql-apollo/core",
-  "version": "0.0.0",
+  "name": "@core",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "test": "sst bind vitest",
@@ -11,7 +11,7 @@
     "@aws-sdk/types": "^3.329.0",
     "@types/aws-lambda": "^8.10.119",
     "@types/node": "^20.1.4",
-    "sst": "2.24.22",
+    "sst": "2.24.23",
     "vitest": "^0.31.0"
   },
   "dependencies": {
