since the table is still empty, I am unsure this works, it errors on a slit somewhere in the library code, but it does deploy and do *something* from the sst console

--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -13,7 +13,11 @@
     "vitest": "^0.34.2"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.3",
+    "@as-integrations/aws-lambda": "^3.1.0",
     "@pothos/core": "^3.33.0",
+    "@trpc/client": "^10.38.1",
+    "@trpc/server": "^10.38.1",
     "@types/aws-lambda": "^8.10.119",
     "graphql": "^16.8.0",
     "ulid": "^2.3.0"
