keep in sync with my other astro project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
+    "moduleResolution": "node16",
+    "resolveJsonModule": true,
     "experimentalDecorators": true,
     "strictNullChecks": true,
+    "noUnusedLocals": false,
     "useDefineForClassFields": false,
     "verbatimModuleSyntax": true,
     "plugins": [
