--- a/src/content/art/excalibur_l3.yaml
+++ b/src/content/art/excalibur_l3.yaml
@@ -5,19 +5,19 @@ art:
  buff:
    - condition: Marching
      attribute: Attack
-     class: mounted
+     class: Mounted
      value:
        - 25
        - percentage
    - condition: Marching
      attribute: Defense
-     class: mounted
+     class: Mounted
      value:
        - 25
        - percentage
    - condition: Marching
      attribute: HP
-     class: mounted
+     class: Mounted
      value:
        - 25
        - percentage
